--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 #logo{
     border-color: green;
 }
+
 img{
     width: 50px;
     height: 50px;
@@ -20,4 +21,16 @@ img{
 }
 .flex-item-1{
     margin-top: 25px;
+}
+/*#tunisiaSection{
+    margin-top: 30px;
+}*/
+#tnTable{
+    color: whitesmoke;
+}
+#random-country{
+    color: black;
+}
+#cardContainer{
+    margin-top: 35px;
 }
